--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
     </div>
   </div>
   <div class="container">
-    <div class="slides1">
+    <div class="slide1">
       <div class="box">
         <h1>JUOKSE HITAASTI NIIN VOIT PAREMMIN.</h1>
-        <button class="button button1">LIITY MUKAAN</button>        
+        <button class="button button1">LIITY MUKAAN</button>
       </div>
-
     </div>
-    <div class="slides">
-        <h1>MISTÄ ON KYSE?</h1> 
-        <h2>Hitaalla eli matalasykkeisellä juoksemisella on todettu monia terveysvaikutuksia. Yleisesti rasitat kehosi vähän, mutta saat suurimman osan terveyshyödyistä. Näin ollen pitkäikäisyys ja hyvinvointi paranee pitkällä aikavälillä ja vältät urheilun haittapuolet kehollesi</h2>
+    <div class="slide slide2-container">
+      <h1 class="slide2otsikko">MISTÄ ON KYSE?</h1>
+      <h3 class="slide2teksti">Hitaalla eli matalasykkeisellä juoksemisella on todettu monia terveysvaikutuksia. Yleisesti rasitat kehosi vähän, mutta saat suurimman osan terveyshyödyistä. Näin ollen pitkäikäisyys ja hyvinvointi paranee pitkällä aikavälillä ja vältät urheilun haittapuolet kehollesi.</h3>
     </div>
-    <div class="slides">
-        <h3>JUOKSE HITAASTI NIIN VOIT PAREMMIN.</h1>
+    <div class="slide">
+      <h3>JUOKSE HITAASTI NIIN VOIT PAREMMIN.</h3>
     </div>
   </div>
 </body>
