--- a/index.html
+++ b/index.html
@@ -25,13 +25,57 @@
         <button class="button button1">LIITY MUKAAN</button>
       </div>
     </div>
+  </div>
     <div class="slide slide2-container">
       <h1 class="slide2otsikko">MISTÄ ON KYSE?</h1>
       <h3 class="slide2teksti">Hitaalla eli matalasykkeisellä juoksemisella on todettu monia terveysvaikutuksia. Yleisesti rasitat kehosi vähän, mutta saat suurimman osan terveyshyödyistä. Näin ollen pitkäikäisyys ja hyvinvointi paranee pitkällä aikavälillä ja vältät urheilun haittapuolet kehollesi.</h3>
+      <div class="image-container">
+        <div class="image-wrapper">
+            <img src="images/immune.png" alt="imun">
+            <h1 class="slide2otsikko1">Immuniteetti</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="image-wrapper">
+            <img src="images/brain.png" alt="bra">
+            <h1 class="slide2otsikko2">Aivot</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="image-wrapper">
+            <img src="images/bicycle.png" alt="BIKE">
+            <h1 class="slide2otsikko3">Suorituskyky</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+      </div>
+ </div>
+    <div class="slide slide3-container">
+      <h4>KEITÄ OLEMME?
+      <div class="box2">
+        
+        <h5>Olemme Slow run yhditys, jonka tarkoituksena on parantaa ihmisten hyvinvointia, rentoutumista
+          ja luoda tervettä yhteisöllisyyttä. Hidas juokseminen on askel kohti terveempää ja tasapain         
+          oisempaaa elämää. Hitaasti juokseminen soveltuu lähes kaikille ja niin myös yhdistyksemmekin. 
+        </h5>
+      </div>
+   
     </div>
-    <div class="slide">
-      <h3>JUOKSE HITAASTI NIIN VOIT PAREMMIN.</h3>
+
+    <div class="slide slide4-container">
+      <h4>KEITÄ OLEMME?
+
+      <h5>Olemme Slow run yhditys, jonka tarkoituksena on parantaa ihmisten hyvinvointia, ren outumista
+          ja luoda tervettä yhteisöllisyyttä. Hidas juokseminen on asekl kohti terveempää ja tasapain         
+          oisempaaa elämää. Hitaasti juokseminen soveltuu lähes kaikille ja niin myös yhdistyksemmekin. 
+      </h3>   
+           
+      </h1>
     </div>
+
   </div>
 </body>
 </html>
